# c_dbg

./: CMakeLists.txt  Makefile  README.md  clib.json  dev.sh  meson.build  tidy.sh
include/: dbg.h  debug_print.h
src/: dbg.c  dbg_module_deps.c
tests/: test_dbg1.c
